--- a/SFML Template/SFML Template.vcxproj.filters
+++ b/SFML Template/SFML Template.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClCompile Include="SceneChooseCharacterOne.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CharacterMgr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneChooseCharacterTwo.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\InputMgr.h">
@@ -156,6 +162,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="SceneChooseCharacterOne.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CharacterMgr.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneChooseCharacterTwo.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
